<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iii"
    android:orientation="vertical"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/image"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/usu"
            >


        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        >


        <EditText
            android:id="@+id/login_txtUser"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/dr2"

            android:hint="@string/reg_matricula"

            android:minHeight="48dp" />

        <EditText
            android:id="@+id/login_txtContrase"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/dr2"
            android:hint="@string/reg_contrsena"
            android:inputType="textPassword"
            android:minHeight="48dp" />





    </LinearLayout>

    <TextView
        android:id="@+id/txt_loginRecCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:text="@string/app_RecContr"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/login_btnentrar"
            android:backgroundTint="@android:color/holo_blue_light"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Edt_lblRegis"
            android:gravity="center"
            android:textSize="20dp"

            android:text="Registrar"/>


    </LinearLayout>


</LinearLayout>